infrastructure/kubernetes/base/namespace.yaml
# Copyright (c) RentalManager. All Rights Reserved.
# Licensed under the MIT License. See LICENSE in the project root for license information.

apiVersion: v1
kind: Namespace
metadata:
  name: core
  labels:
    name: core
    environment: base
